--- a/PickledModels/ferti_prediction.ipynb
+++ b/PickledModels/ferti_prediction.ipynb
@@ -76,8 +76,8 @@
     {
      "data": {
       "text/plain": [
-       "array(['DAP', 'Urea', '28-28', 'DAP', '14-35-14', 'DAP', 'DAP', '28-28',\n",
-       "       'Urea', 'Urea'], dtype=object)"
+       "array(['28-28', '14-35-14', '17-17-17', '20-20', '10-26-26', 'DAP',\n",
+       "       '20-20', 'DAP', '28-28', '17-17-17'], dtype=object)"
       ]
      },
      "execution_count": 7,
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
