--- a/PickledModels/ferti_prediction.ipynb
+++ b/PickledModels/ferti_prediction.ipynb
@@ -76,8 +76,8 @@
     {
      "data": {
       "text/plain": [
-       "array(['28-28', '14-35-14', '17-17-17', '20-20', '10-26-26', 'DAP',\n",
-       "       '20-20', 'DAP', '28-28', '17-17-17'], dtype=object)"
+       "array(['20-20', 'Urea', 'Urea', 'Urea', '14-35-14', '20-20', '28-28',\n",
+       "       '14-35-14', '14-35-14', 'DAP'], dtype=object)"
       ]
      },
      "execution_count": 7,
