--- a/saved models/ferti_prediction.ipynb
+++ b/saved models/ferti_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "x_train, x_test, y_train, y_test=train_test_split(x,y,test_size=0.1)"
+    "x_train, x_test, y_train, y_test=train_test_split(x,y,test_size=0.1,random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['20-20', 'Urea', 'Urea', 'Urea', '14-35-14', '20-20', '28-28',\n",
-       "       '14-35-14', '14-35-14', 'DAP'], dtype=object)"
+       "array(['14-35-14', '10-26-26', '14-35-14', '28-28', '14-35-14', 'Urea',\n",
+       "       'Urea', 'Urea', '17-17-17', '28-28'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,17 +96,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "acc_ferti=accuracy_score(rfc.predict(x_test_sc),y_test)"
+    "acc_ferti=accuracy_score(rfc.predict(x_test_sc),y_test)\n",
+    "acc_ferti"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
